kube/product-service/product-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - ecom-store-vd.duckdns.org
    secretName: ecommerce-tls-secret
  rules:
  - host: ecom-store-vd.duckdns.org
  - http:
      paths:

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-api-service
            port:
              number: 80
